log
Wed, Mar 19, 2025  8:39:14 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:27:10 AM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:16: error: 'elemento' undeclared (first use in this function)
    pushBack(L, elemento) ;
                ^~~~~~~~
exercises.c:50:16: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function 'sumaLista':
exercises.c:61:23: error: comparison between pointer and integer [-Werror]
    for (int k = 0 ; k != NULL ; k++){
                       ^~
exercises.c:62:7: error: invalid use of undefined type 'struct List'
       cont += L[k] ;
       ^~~~
exercises.c:62:16: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       cont += L[k] ;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
f4d2892
Wed, Mar 19, 2025  9:29:25 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:23: error: comparison between pointer and integer [-Werror]
    for (int k = 0 ; k != NULL ; k++){
                       ^~
exercises.c:62:7: error: invalid use of undefined type 'struct List'
       cont += L[k] ;
       ^~~~
exercises.c:62:16: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       cont += L[k] ;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
1b402ff
Wed, Mar 19, 2025  9:39:48 AM: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:23: error: comparison between pointer and integer [-Werror]
    for (int k = 0 ; k != NULL ; k++){ //revisar el null
                       ^~
exercises.c:63:7: error: invalid use of undefined type 'struct List'
       cont += L[k] ;
       ^~~~
exercises.c:63:16: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       cont += L[k] ;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
ff1d015
Wed, Mar 19, 2025  9:44:52 AM: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  1|4
total_score: 10/70
b3fb0d4
Fri, Mar 21, 2025  9:54:38 AM: 
 tests:  1|4
total_score: 10/70
2358717
Fri, Mar 21, 2025 10:15:24 AM: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:21: error: dereferencing pointer to incomplete type 'List {aka struct List}'
    for (int k = 0 ; *L != NULL ; k++)
                     ^~
exercises.c:63:7: error: invalid use of undefined type 'struct List'
       suma += L[k] ;
       ^~~~
Compilation failed
dcea46a
Fri, Mar 21, 2025 10:24:42 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:14: error: implicit declaration of function 'size' [-Werror=implicit-function-declaration]
    int tam = size(L) ;
              ^~~~
exercises.c:64:7: error: invalid use of undefined type 'struct List'
       suma += L[k] ;
       ^~~~
exercises.c:64:16: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       suma += L[k] ;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
f04edb7
Fri, Mar 21, 2025 10:32:41 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:27: error: dereferencing pointer to incomplete type 'List {aka struct List}'
    for (int k = 0 ; k < *L->size ; k++){
                           ^~
exercises.c:63:7: error: invalid use of undefined type 'struct List'
       suma += L[k] ;
       ^~~~
Compilation failed
864fd45
Fri, Mar 21, 2025 10:38:22 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:26: error: dereferencing pointer to incomplete type 'List {aka struct List}'
    for (int k = 0 ; k < L->size ; k++){
                          ^~
Compilation failed
f46072b
Fri, Mar 21, 2025 10:40:45 AM: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
4597b2a
Fri, Mar 21, 2025 11:05:08 AM: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:84:10: error: too few arguments to function 'pushCurrent'
          pushCurrent(L) ;
          ^~~~~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:23:6: note: declared here
 void pushCurrent(List *L, void *dato);
      ^~~~~~~~~~~
Compilation failed
37fb94b
Fri, Mar 21, 2025 11:05:17 AM: 
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:84:10: error: too few arguments to function 'pushCurrent'
          pushCurrent(L) ;
          ^~~~~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:23:6: note: declared here
 void pushCurrent(List *L, void *dato);
      ^~~~~~~~~~~
Compilation failed
5582f21
Fri, Mar 21, 2025 11:05:35 AM: 
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:84:10: error: too few arguments to function 'pushCurrent'
          pushCurrent(L) ;
          ^~~~~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:23:6: note: declared here
 void pushCurrent(List *L, void *dato);
      ^~~~~~~~~~~
Compilation failed
ae4622c
Fri, Mar 21, 2025 11:06:47 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:84:10: error: too few arguments to function 'pushCurrent'
          pushCurrent(L) ;
          ^~~~~~~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:23:6: note: declared here
 void pushCurrent(List *L, void *dato);
      ^~~~~~~~~~~
Compilation failed
8f931ac
